After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675336 - ClutterDropAction needs a ::drop-cancel signal
ClutterDropAction needs a ::drop-cancel signal
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterAction
unspecified
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-05-02 22:20 UTC by Tristan Van Berkom
Modified: 2012-05-03 10:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add "drop-cancel" signal to ClutterDropAction (2.46 KB, patch)
2012-05-02 22:20 UTC, Tristan Van Berkom
committed Details | Review

Description Tristan Van Berkom 2012-05-02 22:20:40 UTC
Created attachment 213337 [details] [review]
Add "drop-cancel" signal to ClutterDropAction

In the case that you might want to animate a drop target, one
can currently perform the animations in between over-in and over-out.

Additionally, if "drop" is fired, one can no longer rely on
receiving the "over-out" event. If however "can-drop" returns
FALSE then there is no way to determine that the drag has been
terminated.

Attached patch adds "drop-cancel" signal.
Comment 1 Emmanuele Bassi (:ebassi) 2012-05-03 06:49:42 UTC
Review of attachment 213337 [details] [review]:

looks good to me, apart from typos in the commit message - "its state", "especially", "its target actor".
Comment 2 Emmanuele Bassi (:ebassi) 2012-05-03 10:37:04 UTC
Pushed attachment 213337 [details] [review] with the commit message changes